# music-dl

./: .gitignore  Cargo.toml  LICENSE  README.md  config.py.example  dl.py  meta.sh
assets/: app.css  app.js  bulma.min.css  index.html
src/: main.rs  window.rs
src/services/: download.rs  metadata.rs  mod.rs
src/structs/: deezer.rs  mod.rs  youtube.rs
test/: .gitignore  build.sh  go.mod  main.go  structs.go
